# algorithms_with_pybind

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml
docs/: conf.py  index.md
src/_cpp/: bindings.cpp  union_find.cpp  union_find.hpp
src/algo/: __init__.py  _core.pyi
tests/: test_compiled.py  test_package.py  test_union_find.py
